--- a/main.css
+++ b/main.css
@@ -1,103 +1,172 @@
-body{
-    background-color: #febe68;
-    color: #f4f4f4 !important;
-    font-family: "Open Sans";
-    cursor: none;
-    margin: 0;
-    overflow: hidden;
+body {
+	background-color: #F02B67;
+	color: #f4f4f4 !important;
+	font-family: "Montserrat";
+	cursor: none;
+	margin: 0;
+	position: relative;
+	overflow: hidden;
 }
 
-.landingPage{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column
+* {
+	box-sizing: border-box
+}
+
+::selection {
+	background: #F02B67;
+}
+
+h1{
+	font-weight: 400!important;
+	font-size: calc(20px + (36 - 20) * ((100vw - 300px) / (1600 - 300)));
+}
+
+.socials{
+	height: 100%;
+	position: absolute;
+	left: 30px;
+	top: 40%;
+	width: 100px;
+	z-index: 20;
+}
+
+ul{
+	list-style-type: none;
+	height: 100%;
+	width: 100%;
+	padding: 0
+}
+
+ul li{
+	margin: 40px 0
+}
+
+ul svg{
+	stroke: white;
+	fill: white;
+}
+
+.socials li.tw svg {
+    width: 20px;
+    height: 20px;
+}
+
+.socials li.fb svg {
+    width: 20px;
+    height: 20px;
+}
+
+
+.socials li a {
+    position: relative;
+    width: 30px;
+    height: 30px;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+	line-height: 30px;
+	display: flex;
+	align-items: center;
+	justify-content: center
+}
+
+.socials svg{
+	width: 2.55319vw;
+	height: 2.55319vw;
+}
+
+.landingPage {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
+	padding: 100px;
+	position: relative;
+}
+
+.landingPage__title{
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start
+}
+.landingPage__title h1, .landingPage__title h3{
+	margin: 10px
 }
 
 .pelement {
-    transition: all 260ms ease-out !important;
-    -webkit-backface-visibility: hidden;
-    -moz-backface-visibility: hidden;
-    -ms-backface-visibility: hidden;
-    -o-backface-visibility: hidden;
-    -webkit-transform-style: flat;
-    -moz-transform-style: flat;
-    -ms-transform-style: flat;
-    -o-transform-style: flat;
-    will-change: transform;
+	transition: all 260ms ease-out !important;
+	will-change: transform;
 }
 
+.control {
+	position: absolute;
+	right: 100px;
+	bottom: 100px
+}
 
-    .control>div {
-        width: 40px;
-        width: 1.70213vw;
-        height: 40px;
-        height: 1.70213vw;
-        float: right;
-        position: relative
-    }
+.control>div {
+	width: 1.70213vw;
+	height: 1.70213vw;
+	float: right;
+	position: relative
+}
 
-    .control>div:before {
-        content: '';
-        display: block;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 40px;
-        width: 1.70213vw;
-        height: 40px;
-        height: 1.70213vw;
-        border-color: #f4f4f4;
-        background: #f4f4f4;
-        -moz-border-radius: 50%;
-        -webkit-border-radius: 50%;
-        border-radius: 50%;
-        -moz-transform: scale(0, 0);
-        -ms-transform: scale(0, 0);
-        -webkit-transform: scale(0, 0);
-        transform: scale(0, 0);
-        filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
-        opacity: 0;
-        transition: transform 260ms, opacity 160ms
-    }
+.control>div:before {
+	content: '';
+	display: block;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 40px;
+	width: 1.70213vw;
+	height: 40px;
+	height: 1.70213vw;
+	background: #f4f4f4;
+	border-radius: 50%;
+	transform: scale(0, 0);
+	opacity: 0;
+	transition: transform 260ms, opacity 160ms
+}
 
-    .control>div:hover:before {
-        filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
-        opacity: 1;
-        -moz-transform: scale(1, 1);
-        -ms-transform: scale(1, 1);
-        -webkit-transform: scale(1, 1);
-        transform: scale(1, 1)
-    }
+.control>div:hover:before {
+	opacity: 1;
+	-moz-transform: scale(1, 1);
+	-ms-transform: scale(1, 1);
+	-webkit-transform: scale(1, 1);
+	transform: scale(1.2)
+}
 
-    .control>div:hover svg path {
-        fill: black
-    }
+.control>div:hover svg path {
+	fill: #F02B67
+}
 
-    .control>div svg {
-        width: 8px;
-        width: .34043vw;
-        height: 14px;
-        height: .59574vw;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        margin: -7px 0 0 -5px;
-        margin: -.29787vw 0 0 -.21277vw
-    }
+.control>div svg {
+	width: 8px;
+	width: .44043vw;
+	height: 14px;
+	height: .79574vw;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin: -7px 0 0 -5px;
+	margin: -.29787vw 0 0 -.21277vw
+}
 
-    .control>div.next {
-        margin-left: 10px;
-        margin-left: .42553vw
-    }
+.control>div.next {
+	margin-left: 10px;
+	margin-left: 1.5vw
+}
 
-    .control>div.next svg {
-        margin: -7px 0 0 -3px;
-        margin: -.29787vw 0 0 -.12766vw
-    }
+.control>div.next svg {
+	margin: -7px 0 0 -3px;
+	margin: -.29787vw 0 0 -.12766vw;
+}
 
+.control svg {
+	fill: #f4f4f4
+}
 
 
 /*cursor*/
@@ -113,7 +182,6 @@ body{
 	-moz-border-radius: 50%;
 	-webkit-border-radius: 50%;
 	border-radius: 50%;
-	-webkit-backface-visibility: hidden;
 	opacity: 0;
 	cursor: none;
 	z-index: 1000;
