--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 body {
-	background-color: #F02B67;
-	color: #f4f4f4 !important;
+	background-color: #242038;
+	color: #8D86C9 !important;
 	font-family: "Montserrat";
 	cursor: none;
 	margin: 0;
@@ -13,19 +13,21 @@ body {
 }
 
 ::selection {
-	background: #F02B67;
+	background: #F7ECE1;
 }
 
 h1{
-	font-weight: 400!important;
 	font-size: calc(20px + (36 - 20) * ((100vw - 300px) / (1600 - 300)));
 }
 
+h3{
+	font-size: calc(15px + (27 - 20) * ((100vw - 300px) / (1600 - 300)));
+}
+
 .socials{
-	height: 100%;
 	position: absolute;
-	left: 30px;
-	top: 40%;
+	left: 10px;
+	bottom: 0;
 	width: 100px;
 	z-index: 20;
 }
@@ -38,24 +40,23 @@ ul{
 }
 
 ul li{
-	margin: 40px 0
+	margin: 20px 0
 }
 
 ul svg{
 	stroke: white;
-	fill: white;
+	fill: #8D86C9;
 }
 
 .socials li.tw svg {
-    width: 20px;
-    height: 20px;
+    width: 15px;
+    height: 15px;
 }
 
 .socials li.fb svg {
-    width: 20px;
-    height: 20px;
+    width: 15px;
+    height: 15px;
 }
-
 
 .socials li a {
     position: relative;
@@ -75,14 +76,313 @@ ul svg{
 	height: 2.55319vw;
 }
 
+/*ILLUSTRATION*/
+
+@keyframes ekumanslidein {
+	0% {
+		transform: translateX(-600px)
+	}
+	50% {
+		transform: translateX(-600px) scaleX(1)
+	}
+	75% {
+		transform: translateX(30px) scaleX(.9)
+	}
+	87.5% {
+		transform: translateX(-5px)
+	}
+	97% {
+		transform: translateX(3px)
+	}
+	to {
+		transform: translateX(0) scaleX(1)
+	}
+}
+
+@keyframes ekumanarmrotate {
+	0%,
+	45%,
+	65%,
+	85%,
+	to {
+		transform: rotate(0deg)
+	}
+	55%,
+	75% {
+		transform: rotate(-5deg)
+	}
+}
+
+@keyframes ekumanhairwobble {
+	50%,
+	to {
+		transform: scaleX(1)
+	}
+	75% {
+		transform: scaleX(1.2)
+	}
+	87.5% {
+		transform: scaleX(.8)
+	}
+	97% {
+		transform: scaleX(1.09)
+	}
+}
+
+@keyframes ekuwomanlidein {
+	0% {
+		transform: translateX(600px)
+	}
+	50% {
+		transform: translateX(600px) scaleX(1)
+	}
+	75% {
+		transform: translateX(-30px) scaleX(.9)
+	}
+	87.5% {
+		transform: translateX(5px)
+	}
+	97% {
+		transform: translateX(-3px)
+	}
+	to {
+		transform: translateX(0) scaleX(1)
+	}
+}
+
+@keyframes kulapdropin {
+	0% {
+		transform: translateY(-230px) scale(0) rotate(0deg)
+	}
+	35% {
+		transform: translateY(-230px) scale(1.03) rotate(20deg)
+	}
+	45% {
+		transform: rotate(10deg)
+	}
+	50% {
+		transform: translateY(-5px) scale(.98) rotate(0deg)
+	}
+	55% {
+		transform: translateY(-10px) scale(1.01) rotate(0deg)
+	}
+	60% {
+		transform: translateY(0) scale(1)
+	}
+	to {
+		transform: translateY(0)
+	}
+}
+
+@keyframes ekuwomanarmrotate {
+	0%,
+	45%,
+	65%,
+	85%,
+	to {
+		transform: rotate(0deg)
+	}
+	55%,
+	75% {
+		transform: rotate(10deg)
+	}
+}
+
+@keyframes ekuwomanarmbackrotate {
+	0%,
+	45%,
+	65%,
+	85%,
+	to {
+		transform: rotate(0deg)
+	}
+	55%,
+	75% {
+		transform: rotate(-13deg)
+	}
+}
+
+@keyframes manscreenpopup {
+	0%,
+	45%,
+	55%,
+	65%,
+	75%,
+	85% {
+		transform: scale(0)
+	}
+	to {
+		transform: scale(1)
+	}
+}
+
+@keyframes manscreenfloat {
+	0%,
+	to {
+		transform: translateY(0)
+	}
+	50% {
+		transform: translateY(-10px)
+	}
+}
+
+@keyframes backhairwave {
+	0%,
+	to {
+		transform: scaleX(1) skewX(0) skewY(0)
+	}
+	50% {
+		transform: scaleX(1.07) skewX(3deg) skewY(5deg)
+	}
+}
+
+#ku{
+	width: 70%;
+	position: absolute;
+	right: -200px;
+}
+
+#ku.svgmate #Bluearmbot,
+#ku.svgmate #Chair,
+#ku.svgmate #chairbackbar,
+#ku.svgmate #man,
+#ku.svgmate .mankauf {
+	animation-name: ekumanslidein;
+	animation-iteration-count: 1;
+	animation-duration: 1.2s;
+	animation-timing-function: ease-out;
+	transform-origin: 502px 454px
+}
+
+#ku.svgmate #Bluearmbot,
+#ku.svgmate #Chair,
+#ku.svgmate #chairbackbar,
+#ku.svgmate .mankauf {
+	animation-duration: 1.5s
+}
+
+#ku.svgmate #Bluearmbot {
+	animation-name: ekumanarmrotate;
+	animation-iteration-count: infinite;
+	animation-duration: 1.8s;
+	animation-delay: 1.2s;
+	transform-origin: 448.122px 403.482px
+}
+
+#ku.svgmate .mankauf {
+	animation-name: ekumanhairwobble;
+	animation-duration: 1.38s;
+	transform-origin: 396.257px 260.5px
+}
+
+#ku.svgmate #Chair_1_,
+#ku.svgmate #Woman,
+#ku.svgmate #back-arm,
+#ku.svgmate #backleg_1_ {
+	animation-name: ekuwomanlidein;
+	animation-iteration-count: 1;
+	animation-duration: 1.8s;
+	animation-timing-function: ease-out;
+	transform-origin: 502px 454px
+}
+
+#ku.svgmate #Chair_1_ {
+	animation-duration: 1.95s
+}
+
+#ku.svgmate #Laptop,
+#ku.svgmate #keyboard {
+	animation-name: kulapdropin;
+	animation-iteration-count: 1;
+	animation-duration: 2s;
+	animation-timing-function: ease-in-out;
+	transform-origin: 648.689px 361.659px
+}
+
+#ku.svgmate #keyboard {
+	animation-duration: 2.5s;
+	transform-origin: 479.857px 383px
+}
+
+#ku.svgmate #lowerarm,
+#ku.svgmate #lowervackarm {
+	animation-name: ekuwomanarmrotate;
+	animation-iteration-count: infinite;
+	animation-duration: 1.8s;
+	animation-delay: 2.1s;
+	animation-timing-function: ease-out;
+	transform-origin: 751.134px 385.578px
+}
+
+#ku.svgmate #lowervackarm {
+	animation-name: ekuwomanarmbackrotate;
+	transform-origin: 736.882px 386px
+}
+
+#ku.svgmate #Man_screen .greenscreen,
+#ku.svgmate #Man_screen .redscreen,
+#ku.svgmate #Man_screen .screenbutton {
+	animation-name: manscreenpopup;
+	animation-iteration-count: 1;
+	animation-duration: 3s;
+	animation-timing-function: ease-in-out;
+	transform-origin: 526.882px 383px
+}
+
+#ku.svgmate #Man_screen .greenscreen,
+#ku.svgmate #Man_screen .redscreen {
+	animation-duration: 3s
+}
+
+#ku.svgmate #Man_screen .greenscreen {
+	animation-duration: 3.3s
+}
+
+#ku.svgmate #Man_screen,
+#ku.svgmate #Man_screen .greenscrmove,
+#ku.svgmate #Man_screen .redskmove,
+#ku.svgmate .womscreenmove {
+	animation-name: manscreenfloat;
+	animation-iteration-count: infinite;
+	animation-duration: 9s;
+	animation-timing-function: ease-in-out
+}
+
+#ku.svgmate #Man_screen .greenscrmove,
+#ku.svgmate #Man_screen .redskmove {
+	animation-duration: 6s
+}
+
+#ku.svgmate #Man_screen .greenscrmove {
+	animation-duration: 7.2s
+}
+
+#ku.svgmate #hairback,
+#ku.svgmate #womanscreen {
+	animation-name: manscreenpopup;
+	animation-iteration-count: 1;
+	animation-duration: 3.9s;
+	animation-timing-function: ease-in-out;
+	transform-origin: 648.689px 361.659px
+}
+
+#ku.svgmate #hairback {
+	animation-name: backhairwave;
+	animation-iteration-count: infinite;
+	animation-duration: 3.3s;
+	transform-origin: 785.132px 295.833px
+}
+
+
+
 .landingPage {
 	width: 100%;
 	height: 100%;
 	display: flex;
-	justify-content: center;
-	flex-direction: column;
+	justify-content: flex-start;
+	flex-direction: row;
 	align-items: center;
-	padding: 100px;
+	padding: 120px;
 	position: relative;
 }
 
@@ -95,21 +395,48 @@ ul svg{
 	margin: 10px
 }
 
+.landingPage__title h3{
+	font-weight: 500;
+	display: none;
+}
+
 .pelement {
 	transition: all 260ms ease-out !important;
 	will-change: transform;
 }
 
-.control {
+.bottom{
 	position: absolute;
 	right: 100px;
-	bottom: 100px
+	bottom: 50px;
+	z-index: 10;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.bottom h5{
+	font-weight: 700;
+	margin: 0 8px;
+}
+
+.bottom h5:nth-child(1){
+	color: #725AC1;
+}
+
+.bottom h5:nth-child(3){
+	margin-right: 40px;
+}
+
+.control {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .control>div {
 	width: 1.70213vw;
 	height: 1.70213vw;
-	float: right;
 	position: relative
 }
 
@@ -117,13 +444,13 @@ ul svg{
 	content: '';
 	display: block;
 	position: absolute;
-	top: 0;
+	top: 1;
 	left: 0;
 	width: 40px;
 	width: 1.70213vw;
 	height: 40px;
 	height: 1.70213vw;
-	background: #f4f4f4;
+	background: #8D86C9;
 	border-radius: 50%;
 	transform: scale(0, 0);
 	opacity: 0;
@@ -139,7 +466,7 @@ ul svg{
 }
 
 .control>div:hover svg path {
-	fill: #F02B67
+	fill: #F7ECE1
 }
 
 .control>div svg {
@@ -165,7 +492,7 @@ ul svg{
 }
 
 .control svg {
-	fill: #f4f4f4
+	fill: #8D86C9
 }
 
 
@@ -178,7 +505,7 @@ ul svg{
 	top: 50%;
 	left: 50%;
 	margin: -4px 0 0 -4px;
-	background: #f4f4f4;
+	background: #8D86C9;
 	-moz-border-radius: 50%;
 	-webkit-border-radius: 50%;
 	border-radius: 50%;
@@ -196,7 +523,7 @@ ul svg{
 	width: 30px;
 	margin: -15px 0 0 -15px;
 	background: transparent;
-	border: 2px solid #f4f4f4
+	border: 2px solid #8D86C9
 }
 
 .cursor .pointer {
@@ -325,7 +652,7 @@ ul svg{
 }
 
 .drag .next svg path {
-	fill: #f4f4f4
+	fill: #8D86C9
 }
 
 .drag .prev {
@@ -337,7 +664,7 @@ ul svg{
 }
 
 .drag .prev svg path {
-	fill: #f4f4f4
+	fill: #8D86C9
 }
 
 .drag .open {
