--- a/main.css
+++ b/main.css
@@ -46,6 +46,15 @@ ul svg{
 	fill: white;
 }
 
+header{
+	padding: 30px;
+	height: 10%;
+}
+
+header h1{
+	font-weight: 800!important;
+}
+
 .socials li.tw svg {
     width: 20px;
     height: 20px;
@@ -77,7 +86,7 @@ ul svg{
 
 .landingPage {
 	width: 100%;
-	height: 100%;
+	height: 90%;
 	display: flex;
 	justify-content: center;
 	flex-direction: column;
