--- a/main.css
+++ b/main.css
@@ -1,35 +1,36 @@
 @font-face {
-	font-family: 'Teko';
-	font-weight: 400;
-	font-style: normal;
-	src: local("Teko Regular"), local("Teko-400"), url("fonts/Teko-Regular.ttf") format("truetype")
+  font-family: "Teko";
+  font-weight: 400;
+  font-style: normal;
+  src: local("Teko Regular"), local("Teko-400"),
+    url("fonts/Teko-Regular.ttf") format("truetype");
 }
 
 @font-face {
-	font-family: 'Teko';
-	font-weight: 500;
-	font-style: normal;
-	src: local("Teko Medium"), local("Teko-500"), url("fonts/Teko-Medium.woff2") format("woff2"), url("fonts/Teko-Medium.woff") format("woff"), url("fonts/Teko-Medium.ttf") format("truetype")
+  font-family: "Teko";
+  font-weight: 500;
+  font-style: normal;
+  src: local("Teko Medium"), local("Teko-500"),
+    url("fonts/Teko-Medium.woff2") format("woff2"),
+    url("fonts/Teko-Medium.woff") format("woff"),
+    url("fonts/Teko-Medium.ttf") format("truetype");
 }
 
-
 @font-face {
-  font-family: 'Gotham Medium';
+  font-family: "Gotham Medium";
   font-style: normal;
   font-weight: normal;
-  src: local('Gotham Medium'), url('fonts/GothamMedium.woff') format('woff');
-  }
+  src: local("Gotham Medium"), url("fonts/GothamMedium.woff") format("woff");
+}
 
-  @font-face {
-    font-family: 'Gotham Bold';
-    font-style: normal;
-    font-weight: normal;
-    src: local('Gotham Bold'), url('fonts/GothamBold.woff') format('woff');
-    }
-    
-    
+@font-face {
+  font-family: "Gotham Bold";
+  font-style: normal;
+  font-weight: normal;
+  src: local("Gotham Bold"), url("fonts/GothamBold.woff") format("woff");
+}
 
-  body{
+body {
   background-color: #212322;
   color: #aebebf !important;
   font-family: "Gotham Bold";
@@ -43,111 +44,55 @@
   box-sizing: border-box;
 }
 
-a span{
+a span {
   cursor: pointer;
+  font-size: 14px;
+  display: inline-block;
+  transition: color 200ms cubic-bezier(0.47, 0, 0.745, 0.715)
+}
+a span:hover {
+  color: #ff5851
 }
 
-  .mouse-track {
-	pointer-events: none;
-	position: absolute;
-	z-index: 1000;
-	opacity: 0
+
+.mouse-track {
+  pointer-events: none;
+  position: absolute;
+  z-index: 1000;
+  opacity: 0;
 }
 
-  .mouse-track .outer-circle {
-	stroke: #969292;
-	transform: translateX(-50%) translateY(-50%) rotate(-90deg);
-	stroke-width: 2px;
-	fill: none;
-	height: 18px;
-	width: 18px;
-	overflow: visible;
-	position: absolute
-}
-
-  .mouse-track .outer-circle .countdown {
-	opacity: 0;
-	stroke: #f14343;
-	position: absolute;
-	stroke-dashoffset: 125px;
-	stroke-dasharray: 125px;
-	stroke-width: 4px
-}
-
-  .mouse-track .inner-circle {
-	stroke: #969292;
-	transform: translateX(-50%) translateY(-50%);
-	stroke-width: 2px;
-	fill: none;
-	height: 2px;
-	width: 2px;
-	opacity: 0.6;
-	overflow: visible;
-	position: absolute
-}
-
-  .mouse-track .arrow-right {
-	stroke: #f14343;
-	opacity: 0;
-	visibility: hidden;
-	stroke-width: 2px;
-	transform: rotate(180deg);
-	margin-left: 10px;
-	margin-top: -7px;
-	position: absolute
-}
-
-  .mouse-track .arrow-left {
-	stroke: #f14343;
-	opacity: 0;
-	margin-left: -20px;
-	margin-top: -6px;
-	visibility: hidden;
-	stroke-width: 2px;
-	position: absolute
-}
-
-  .mouse-track .play {
-	fill: #969292;
-	opacity: 1;
-	margin-top: -6px;
-	stroke-width: 2px;
-	margin-top: -18px;
-	margin-left: -14px;
-	transform: scale(0);
-	position: absolute
-}
-
-  .mouse-track .stop {
-	fill: #969292;
-	height: 38px;
-	width: 38px;
-	margin-left: -19px;
-	margin-top: -19px;
-	transform: scale(0);
-	position: absolute
+.mouse-track .outer-circle {
+  stroke: #969292;
+  transform: translateX(-50%) translateY(-50%) rotate(-90deg);
+  stroke-width: 2px;
+  fill: none;
+  height: 18px;
+  width: 18px;
+  overflow: visible;
+  position: absolute;
 }
 
 @media (max-width: 600px) {
-	  .mouse-track {
-		opacity: 0 !important;
-		visibility: hidden !important
-	}
+  .mouse-track {
+    opacity: 0 !important;
+    visibility: hidden !important;
+  }
 }
 
 .layout {
   position: absolute;
   width: 100%;
   height: 100%;
-  padding: 20px 30px
+  padding: 40px 60px;
 }
 
-.topbar{
-	width: 100%;
-	height: 10%;
-	display: flex;
-	justify-content: space-between;
-	align-items: center
+.topbar {
+  width: 100%;
+  height: 10%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .gradient {
@@ -171,17 +116,18 @@ a span{
   user-select: none;
   width: 45px;
   position: fixed;
-  opacity: 1;
   height: 100px;
-  right: 30px;
+  right: 40px;
   bottom: 110px;
   z-index: 113;
   display: flex;
   align-items: flex-end;
+  opacity: 0;
+  visibility: hidden
 }
-.bottomMenu span{
-  font-family: 'Teko';
-  font-weight: 500
+.bottomMenu span {
+  font-family: "Teko";
+  font-weight: 500;
 }
 
 .bottomMenu::after {
