--- a/main.css
+++ b/main.css
@@ -95,6 +95,19 @@ a span:hover {
   align-items: center;
 }
 
+.topbar__logo{
+  display: flex;
+  align-items: center
+}
+
+.topbar__logo svg{
+  width: 14%;
+  margin-right: 20px
+}
+.topbar__logo svg g path{
+  fill: #aebebf
+}
+
 .gradient {
   position: absolute;
   width: 100%;
