--- a/main.css
+++ b/main.css
@@ -36,16 +36,23 @@ body {
   font-family: "Gotham Bold";
   margin: 0;
   position: relative;
+  cursor: none;
+  touch-action: none;
   overflow: hidden;
 }
 
-* {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+*,*::before,*::after{
+  box-sizing:border-box;
+  touch-action:none;
+  -webkit-user-select:none;
+  -khtml-user-select:none;
+  -moz-user-select:none;
+  -ms-user-select:none;
+  user-select:none
 }
 
 a span {
-  cursor: pointer;
+  cursor: none;
   font-size: 14px;
   display: inline-block;
   transition: color 200ms cubic-bezier(0.47, 0, 0.745, 0.715)
@@ -102,7 +109,7 @@ a span:hover {
 
 .topbar__logo svg{
   width: 14%;
-  margin-right: 20px
+  margin-right: 10px
 }
 .topbar__logo svg g path{
   fill: #aebebf
@@ -129,12 +136,10 @@ a span:hover {
   user-select: none;
   width: 45px;
   position: fixed;
-  height: 100px;
+  height: 50px;
   right: 40px;
   bottom: 110px;
   z-index: 113;
-  display: flex;
-  align-items: flex-end;
   opacity: 0;
   visibility: hidden
 }
