--- a/main.css
+++ b/main.css
@@ -30,18 +30,44 @@
   src: local("Gotham Bold"), url("fonts/GothamBold.woff") format("woff");
 }
 
+@keyframes change{
+  0%{
+    opacity: 1;
+  }
+  100%{
+    opacity: 0;
+    padding-bottom: 250px
+  }
+}
+
+@keyframes show{
+  0%{
+    opacity: 0;
+    padding-top: 250px
+  }
+  100%{
+    opacity: 1;
+    padding: 0
+  }
+}
+
 h1{
   margin: 0
 }
 
 h1,h1.heading--halftone:after{
-  font-size: calc(40px + (150 - 40) * ((100vw - 300px) / (1920 - 300)));
+  font-size: calc(40px + (130 - 40) * ((100vw - 300px) / (1920 - 300)));
   letter-spacing: 4px;
 }
 h3{
   font-family: "Gotham Light";
   font-size: calc(10px + (20 - 10) * ((100vw - 300px) / (1920 - 300)));
   line-height: 40px
+}
+
+h4{
+  margin: 0;
+  font-family: "Gotham Light"
 }
 
 .heading--stroke {
@@ -66,9 +92,16 @@ h3{
   -moz-text-fill-color: transparent;
   left: 5px;
   top: 5px;
-  content: "Hello";
   z-index: -1;
   position: absolute;
+}
+
+.hello.heading--halftone:after{
+  content: "Hello";
+}
+
+.trader24.heading--halftone:after{
+  content: "Trader24";
 }
 
 body {
@@ -256,6 +289,13 @@ a span:hover {
 }
 
 #home{
+  display: none;
+  justify-content: center;
+  flex-direction: column;
+  height: 90%;
+}
+
+#project1{
   display: none;
   justify-content: center;
   flex-direction: column;
