--- a/main.css
+++ b/main.css
@@ -51,6 +51,27 @@
   }
 }
 
+@keyframes backwardsChange{
+  0%{
+    opacity: 1;
+  }
+  100%{
+    opacity: 0;
+    padding-top: 250px
+  }
+}
+
+@keyframes backwardsShow{
+  0%{
+    opacity: 0;
+    padding-bottom: 250px
+  }
+  100%{
+    opacity: 1;
+    padding: 0
+  }
+}
+
 h1{
   margin: 0
 }
