--- a/main.css
+++ b/main.css
@@ -72,7 +72,7 @@
   }
 }
 
-h1{
+h1,h2{
   margin: 0
 }
 
@@ -80,15 +80,25 @@ h1,h1.heading--halftone:after{
   font-size: calc(40px + (130 - 40) * ((100vw - 300px) / (1920 - 300)));
   letter-spacing: 4px;
 }
+
+h2,h2.heading--halftone:after{
+  font-size: calc(30px + (100 - 30) * ((100vw - 300px) / (1920 - 300)));
+  letter-spacing: 4px;
+}
+
 h3{
   font-family: "Gotham Light";
   font-size: calc(10px + (20 - 10) * ((100vw - 300px) / (1920 - 300)));
   line-height: 40px
 }
 
-h4{
+h4,h5{
   margin: 0;
   font-family: "Gotham Light"
+}
+
+.type{
+  color:#292929;
 }
 
 .heading--stroke {
@@ -318,7 +328,11 @@ a span:hover {
 
 #project1{
   display: none;
-  justify-content: center;
-  flex-direction: column;
+  justify-content: space-between;
   height: 90%;
+  align-items: center;
+}
+.presentation{
+  width: 50%;
+  height: auto;
 }
