--- a/main.css
+++ b/main.css
@@ -40,6 +40,25 @@
   }
 }
 
+@keyframes hidePresentation{
+  0%{
+    opacity: .2;
+  }
+  100%{
+    opacity: 0;
+  }
+}
+
+@keyframes showPresentation{
+  0%{
+    opacity: 0;
+  }
+  100%{
+    opacity: .2;
+  }
+}
+
+
 @keyframes show{
   0%{
     opacity: 0;
@@ -333,7 +352,10 @@ a span:hover {
   align-items: center;
 }
 .presentation{
-  width: 50%;
+  width: 60%;
   height: auto;
-  border-radius: 10px;
+  position: relative;
+  border-radius: 5px;
+  opacity: .2;
+  transition: all 0s;
 }
