--- a/main.css
+++ b/main.css
@@ -42,7 +42,7 @@
 
 @keyframes hidePresentation{
   0%{
-    opacity: .3;
+    opacity: .45;
   }
   100%{
     opacity: 0;
@@ -54,7 +54,7 @@
     opacity: 0;
   }
   100%{
-    opacity: .3;
+    opacity: .45;
   }
 }
 
@@ -359,7 +359,11 @@ a span:hover {
   width: 60%;
   height: auto;
   position: relative;
-  border-radius: 5px;
-  opacity: .3;
+  border-radius: 10px;
+  opacity: .45;
   transition: all 0s;
+}
+
+.presentation.socialme{
+  padding: 70px
 }
